# gen-bucketname

./: LICENSE  README.md  pyproject.toml
src/: gen-bucketname.py
src/gen_bucketname.egg-info/: PKG-INFO  SOURCES.txt
