[project]
name = "gen-bucketname"
version = "1.0.0"
authors = [
  { name="Thomas Wolfis", email="thomas.wolfis@gmail.com" },
]
description = "Package for generating bucketnames"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/TWolfis/gen-bucketname" 
"Bug Tracker" = "https://github.com/TWolfis/gen-bucketname/issues"

